[tool.poetry]
name = "fhel"
version = "0.0.8"
description = "Compiler for fhel releases"
authors = ["Jeffrey Murray <jeffmur@uw.edu>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
conan = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# For IDE to recognize the venv
[tool.pyright]
venvPath = "."
venv = "venv"
